refactor: use ToastNotification class for auto-closing messages in SetupView